client/src/App.css
/***************************************************************************** 
                                Table of Contents
1. Global Styles
2. Common Styles
3. Layout
    3.1 Navigation
    3.2 Content
        3.2.1 Schedule (left-column)
        3.2.2 Courses Tabs (Right-column)
    3.3 Footer
4. Components
    4.1 accordion
        4.1.1 yearAccordion 
        4.1.2 section
    4.2 button
        4.2.1 btn-primary
        4.2.2 btn-secondary
        4.2.3 upload and import button
        4.2.4 remove-year-btn
        4.2.5 add-year-btn
        4.2.6 add-course-btn
        4.2.7 course-btn
        4.2.8 remove-course-btn
        4.2.9 close-tutorial-btn
    4.3 card
        4.3.1 course-card
        4.3.2 tutorial-card
    4.4 draggable course
        4.4.1 quarter-course
        4.4.1 reuired-course
    4.5 droppable container
    4.6 input
    4.7 tab
5. Images
    5.1 Major
    5,2 Footer logo
    5,3 Author 
6. Media Query
    6.1 Extra small devices (phones, 600px and down)
    6.2 Small devices (portrait tablets and large phones, 600px and up)
    6.3 Medium devices (landscape tablets, 768px and up)
    6.4 Large devices (laptops/desktops, 992px and up)
    6.5 Extra large devices (large laptops and desktops, 1200px and up)
**************************************************************************************/

/**** Cancel Drop and Drag animation ****/
#tab-content div[data-rbd-placeholder-context-id] {display: none !important;}
#tab-content div[data-rbd-draggable-context-id] {transition: 0.001s !important;}
#tab-content div[data-rbd-droppable-context-id] {transition: 0.001s !important;}

/**********************************************
*************  1. Global Styles  **************
***********************************************/
:root {
    --transition-time: 400ms;
    --text-color: #000000; /* black */
    --border-color: #D6D6D6;  /* light gray*/
    --primary-color:#FFFFFF; /* white */
    --primary-color-2: #F2F2F2; /* cultured */
    --secondary-color:#1F1F1F; /* Eerie Black */
    --accent-color-1:#DF2935; /* Rose Madder */
    --accent-color-2:#307ABB; /* French Blue */
}
* {
    box-sizing: border-box;
}

body {
    margin: 0;
    font-display: optional;
    font-family: 'Roboto','Times New Roman',Times, serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    color: var(--text-color);
}
  
code {font-family: 'Roboto','Times New Roman',Times, serif;}

html {font-size: 10px; color:#1F1F1F}

html, body, #root { background-color: var(--primary-color);}

h1, h2, h3, h4, h5, h6, p, div, ul, button {
    margin: 0;
    padding: 0;
    font-size: 1.6rem;
}

a, button, svg { cursor: pointer; }

ul {list-style-type: none;}

a {text-decoration: none;}

button {
    background: transparent;
    border: none;
}

svg { font-size: 10px; }

/**********************************************
*************  2. Common styles  **************
***********************************************/
.relative {position: relative;}
.absolute {position: absolute;}
.static {position: static;}

.flex { display: flex; }

/* upload, download, help, tutorial, browse, major */
.flex-container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

.round-10 {border-radius: 1rem;}
.round-15 { border-radius: 1.5rem;}
.round-top-left { border-top-left-radius: 1.5rem;}
.round-top-right { border-top-right-radius: 1.5rem;}
.round-bottom-left { border-bottom-left-radius: 1.5rem;}
.round-bottom-right {border-bottom-right-radius: 1.5rem;}

.green {color: #07B053;} /* success-message */
.red {color: var(--accent-color-1);} /* fail-message*/

/**********************************************
*****************  3. Layout  *****************
***********************************************/
/*** 3.1 Navigation bar ***/
#nav-bar {
    display: grid;
    padding: 2rem 2.4rem;
    background-color: var(--secondary-color);
}

#logo-text-brand {align-items: center;  color: var(--primary-color);}
#download { grid-column: 3;}
#upload { z-index: 2; grid-column: 4; }
#help {grid-column: 5;}

/*** 3.2 content ***/
#body-container {
    display: grid; 
}

/* 3.2.1 schedule (left-column) */
#schedule {
    flex-direction: column;
    overflow-y: scroll;
    overflow-x: visible;

    height: 65rem;
}

#schedule-function-row{
    justify-content: space-between;
    align-items: center;
    margin-top: 2rem;
}

/* 3.2.2 tab container (right-column)*/
#tab-container {
    border-radius: 1.5rem;
    box-shadow: 0rem 0.2rem 0.4rem 0rem rgb(0 0 0/60%);
    height: 64.8rem;
}

.tab {
    flex-grow: 1;
    transition: background-color ease-in-out 0.4s;
    padding: 0.5rem;
    background-color: var(--primary-color-2);
    cursor: pointer;
    font-weight: 600;
}

.tab:hover {color: var(--accent-color-2);}

.tab-active {
    border-top: 0.4rem solid var(--accent-color-2);
    background-color: var(--primary-color);
    color: var(--accent-color-2);
}

#tab-content{
    overflow: scroll;
    border-top: 1px solid white;
    height: calc(100% - 50px);
}

/*** 3.3 footer ***/
#footer, #author-list-containter {
    display: grid;
    align-items: center;
}

#footer {
    justify-items: center;
    padding: 0rem 4rem;
    background-color: var(--secondary-color);
    color: var(--primary-color);
}

#author-list-containter {row-gap: 2rem;}
#author-list-containter > li {
    display: flex;
    flex-direction: column;
}

.author-name {
    color: var(--primary-color);
    margin-left: 1.6rem;
}

#copyright,
.author-name {
    display: flex;
    align-items: center;
}

#footer-logo-container { margin: 2rem 0rem;}

#footer-header-container {
    margin-top: 2rem;
    height: 6.4rem;
}
#footer-header-container > h1 {
    font-size: 2.6rem;
    font-weight: 500;
}

#about-p {
    text-align: justify;
    line-height: 1.4;
}

.contact-list {
    display: flex;
    flex-wrap: wrap;
    margin-left: 6.5rem;
}

.contact-item {width:5rem;}
/* ... */

